--- a/involved.html
+++ b/involved.html
@@ -9,6 +9,9 @@
 <body>
     <header>
         <nav>
+            <div class="logo-centered">
+                <img src="logo.png" alt="Uyir Foundation Logo" />
+            </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="events.html">Events & Gallery</a></li>
