--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             <div class="logo-centered">
                 <img src="logo.png" alt="Uyir Foundation Logo" />
             </div>
+                    <h1>Uyir Foundation</h1>
+
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="events.html">Events & Gallery</a></li>
