--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="home">
         <h1>Welcome to Uyir Foundation</h1>
         <p class="motto">Helping people who are in need</p>
-        <p>At Uyir Foundation, we are committed to preserving nature, nurturing life, and empowering communities in need.</p>
+        <p>At Uyir Foundation, our mission is to uplift communities in need by providing essential resources, education, and support. We believe in the power of collective effort to create lasting change, ensuring that everyone has the opportunity to thrive</p>
         <a href="involved.html" class="cta-button">Get Involved</a>
     </section>
 
