--- a/involved.html
+++ b/involved.html
@@ -25,8 +25,8 @@
 
     <section class="involved">
         <h1>Get Involved</h1>
-        <p>Join us in our mission to make a positive impact. Whether you are an individual, organization, or business, there are many ways you can support Uyir Foundation.</p>
-        <a href="contact.html" class="cta-button">Contact Us to Get Started</a>
+        <p>YOUR CONTRIBUTION CAN MAKE A DIFFERENCE. SCAN THE QR CODE TO DONATE AND SUPPORT OUR MISSION TO EMPOWER LIVES AND TRANSFORM COMMUNITIES.</p>
+        <a href="donate.html" class="cta-button">Donate</a>
     </section>
 
     <footer>
