--- a/involved.html
+++ b/involved.html
@@ -25,7 +25,7 @@
 
     <section class="involved">
         <h1>Get Involved</h1>
-        <p>YOUR CONTRIBUTION CAN MAKE A DIFFERENCE. SCAN THE QR CODE TO DONATE AND SUPPORT OUR MISSION TO EMPOWER LIVES AND TRANSFORM COMMUNITIES.</p>
+        <p>YOUR CONTRIBUTION CAN MAKE A DIFFERENCE. CLICK TO DONATE AND SUPPORT OUR MISSION TO EMPOWER LIVES AND TRANSFORM COMMUNITIES.</p>
         <a href="donate.html" class="cta-button">Donate</a>
     </section>
 
