--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
             <div class="logo-centered">
                 <img src="logo.png" alt="Uyir Foundation Logo" />
             </div>
-                    <h1>Uyir Foundation</h1>
 
-            <ul>
+            <h1>Uyir Foundation</h1>
+
+            <button class="menu-toggle" id="menu-toggle">&#9776;</button>
+
+            <ul id="nav-links" class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="events.html">Events & Gallery</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
@@ -31,12 +34,22 @@
     <section class="home">
         <h1>Welcome to Uyir Foundation</h1>
         <p class="motto">Helping people who are in need</p>
-        <p>At Uyir Foundation, our mission is to uplift communities in need by providing essential resources, education, and support. We believe in the power of collective effort to create lasting change, ensuring that everyone has the opportunity to thrive</p>
+        <p>At Uyir Foundation, our mission is to uplift communities in need by providing essential resources, education, and support. We believe in the power of collective effort to create lasting change, ensuring that everyone has the opportunity to thrive.</p>
         <a href="involved.html" class="cta-button">Get Involved</a>
     </section>
 
     <footer>
         <p>&copy; 2024 Uyir Foundation. All rights reserved.</p>
     </footer>
+
+    <!-- JavaScript for menu toggle -->
+    <script>
+        const menuToggle = document.getElementById('menu-toggle');
+        const navLinks = document.getElementById('nav-links');
+
+        menuToggle.addEventListener('click', () => {
+            navLinks.classList.toggle('active');
+        });
+    </script>
 </body>
 </html>
