--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
             <div class="logo-centered">
                 <img src="logo.png" alt="Uyir Foundation Logo" />
             </div>
-
             <h1>Uyir Foundation</h1>
 
-            <button class="menu-toggle" id="menu-toggle">&#9776;</button>
+            <!-- Hamburger menu for mobile -->
+            <div class="hamburger" onclick="toggleMenu()">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
 
-            <ul id="nav-links" class="nav-links">
+            <ul id="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="events.html">Events & Gallery</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
@@ -42,14 +46,6 @@
         <p>&copy; 2024 Uyir Foundation. All rights reserved.</p>
     </footer>
 
-    <!-- JavaScript for menu toggle -->
-    <script>
-        const menuToggle = document.getElementById('menu-toggle');
-        const navLinks = document.getElementById('nav-links');
-
-        menuToggle.addEventListener('click', () => {
-            navLinks.classList.toggle('active');
-        });
-    </script>
+    <script src="scripts.js"></script>
 </body>
 </html>
