--- a/events.html
+++ b/events.html
@@ -12,9 +12,15 @@
             <div class="logo-centered">
                 <img src="logo.png" alt="Uyir Foundation Logo" />
             </div>
-                                <h1>Uyir Foundation</h1>
+            <h1>Uyir Foundation</h1>
 
-            <ul>
+            <div class="hamburger" onclick="toggleMenu()">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+
+            <ul id="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="events.html">Events & Gallery</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
@@ -23,39 +29,24 @@
         </nav>
     </header>
 
-    <section class="gallery">
-        <h1>Our Events & Gallery</h1>
+    <section class="event">
+        <h2>Upcoming Event: Deva Concert</h2>
+        <p>Join us for an unforgettable concert experience to raise funds for Uyir Foundation's mission.</p>
+        <a href="https://www.example.com/tickets" class="cta-button">Get Tickets</a>
+    </section>
 
-        <!-- Event: Deva Concert -->
-        <div class="event">
-            <h2>Upcoming Event: Deva Concert</h2>
-            <p>Join us for an enchanting evening of music with renowned artist <strong>Deva</strong> on <strong>September 28, 2024</strong>.</p>
-            <a href="https://tickets.uyirfoundation.org/deva-concert" class="cta-button" target="_blank">Get Tickets</a>
+    <section class="slideshow-container">
+        <div class="slide">
+            <img src="gallery1.jpg" alt="Gallery Image 1">
         </div>
-
-        <!-- Sliding Gallery -->
-        <div class="slideshow-container">
-            <div class="slide fade">
-                <img src="test1.jpeg" alt="Gallery Image 1">
-            </div>
-            <div class="slide fade">
-                <img src="test2.webp" alt="Gallery Image 2">
-            </div>
-            <div class="slide fade">
-                <img src="test3.jpeg" alt="Gallery Image 3">
-            </div>
-            <div class="slide fade">
-                <img src="test4.jpeg" alt="Gallery Image 4">
-            </div>
+        <div class="slide">
+            <img src="gallery2.jpg" alt="Gallery Image 2">
         </div>
-
-        <br>
-        <!-- Dots for navigation -->
-        <div style="text-align:center">
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
+        <div class="slide">
+            <img src="gallery3.jpg" alt="Gallery Image 3">
+        </div>
+        <div class="slide">
+            <img src="gallery4.jpg" alt="Gallery Image 4">
         </div>
     </section>
 
@@ -63,6 +54,6 @@
         <p>&copy; 2024 Uyir Foundation. All rights reserved.</p>
     </footer>
 
-    <script src="slider.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
