--- a/involved.html
+++ b/involved.html
@@ -12,9 +12,16 @@
             <div class="logo-centered">
                 <img src="logo.png" alt="Uyir Foundation Logo" />
             </div>
-                                <h1>Uyir Foundation</h1>
+            <h1>Uyir Foundation</h1>
 
-            <ul>
+            <!-- Hamburger menu for mobile -->
+            <div class="hamburger" onclick="toggleMenu()">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+
+            <ul id="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="events.html">Events & Gallery</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
@@ -32,5 +39,7 @@
     <footer>
         <p>&copy; 2024 Uyir Foundation. All rights reserved.</p>
     </footer>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
