--- a/events.html
+++ b/events.html
@@ -36,17 +36,19 @@
     </section>
 
     <section class="slideshow-container">
-        <div class="slide">
-            <img src="gallery1.jpg" alt="Gallery Image 1">
-        </div>
-        <div class="slide">
-            <img src="gallery2.jpg" alt="Gallery Image 2">
-        </div>
-        <div class="slide">
-            <img src="gallery3.jpg" alt="Gallery Image 3">
-        </div>
-        <div class="slide">
-            <img src="gallery4.jpg" alt="Gallery Image 4">
+        <div class="slideshow-container">
+            <div class="slide fade">
+                <img src="test1.jpeg" alt="Gallery Image 1">
+            </div>
+            <div class="slide fade">
+                <img src="test2.webp" alt="Gallery Image 2">
+            </div>
+            <div class="slide fade">
+                <img src="test3.jpeg" alt="Gallery Image 3">
+            </div>
+            <div class="slide fade">
+                <img src="test4.jpeg" alt="Gallery Image 4">
+            </div>
         </div>
     </section>
 
