--- a/involved.html
+++ b/involved.html
@@ -28,7 +28,9 @@
     <section class="involved">
         <h1>Get Involved</h1>
         <p>YOUR CONTRIBUTION CAN MAKE A DIFFERENCE. CLICK TO DONATE AND SUPPORT OUR MISSION TO EMPOWER LIVES AND TRANSFORM COMMUNITIES.</p>
-        <a href="donate.html" class="cta-button">Donate</a>
+        <a href="https://www.paypal.com/donate?business=YOUR_PAYPAL_BUSINESS_ID&currency_code=USD" class="cta-button" target="_blank">
+            Donate
+        </a>
     </section>
 
     <footer>
