--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uyir Foundation - Contact Us</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script type="text/javascript">
-        (function() {
-            emailjs.init("YOUR_USER_ID"); // Replace with your EmailJS user ID
-        })();
-    </script>
 </head>
 <body>
     <header>
@@ -37,16 +31,7 @@
                 <p>123 Uyir Street, Chennai, Tamil Nadu, India</p>
                 <p>Email: raveenakumaravel@gmail.com</p> <!-- Updated email address -->
                 <p>Phone: +91 98765 43210</p>
-            </div>
-            <div class="contact-form">
-                <h2>Send Us a Message</h2>
-                <form id="contact-form">
-                    <input type="text" name="name" id="name" placeholder="Your Name" required>
-                    <input type="email" name="email" id="email" placeholder="Your Email" required>
-                    <textarea name="message" id="message" placeholder="Your Message" rows="5" required></textarea>
-                    <button type="submit">Send Message</button>
-                </form>
-                <p id="status-message"></p> <!-- Status message placeholder -->
+                <a href="mailto:raveenakumaravel@gmail.com" class="cta-button">Send Us an Email</a> <!-- Button to open email client -->
             </div>
         </div>
     </section>
@@ -54,30 +39,5 @@
     <footer>
         <p>&copy; 2024 Uyir Foundation. All rights reserved.</p>
     </footer>
-
-    <script>
-        // Function to send email via EmailJS
-        document.getElementById('contact-form').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            // Collect the form data
-            const name = document.getElementById('name').value;
-            const email = document.getElementById('email').value;
-            const message = document.getElementById('message').value;
-
-            // Send email via EmailJS
-            emailjs.send('YOUR_SERVICE_ID', 'YOUR_TEMPLATE_ID', {
-                from_name: name,
-                from_email: email,
-                message: message,
-                to_email: 'raveenakumaravel@gmail.com' // Send the email to this address
-            }).then(function(response) {
-                document.getElementById('status-message').innerHTML = "Message sent successfully!";
-                document.getElementById('contact-form').reset();
-            }, function(error) {
-                document.getElementById('status-message').innerHTML = "Failed to send the message. Please try again.";
-            });
-        });
-    </script>
 </body>
 </html>
