--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
         <div class="contact-details">
             <div class="contact-info">
                 <h2>Our Address</h2>
-                <p>123 Uyir Street, Chennai, Tamil Nadu, India</p>
-                <p>Email: raveenakumaravel@gmail.com</p> <!-- Updated email address -->
+                <p>12018 Garner Mill ln, Houston, Texas</p>
+                <p>Email: uyirfoundation@gmail.com</p> <!-- Updated email address -->
                 <p>Phone: +91 98765 43210</p>
                 <a href="mailto:raveenakumaravel@gmail.com" class="cta-button">Send Us an Email</a> <!-- Button to open email client -->
             </div>
