--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                 <h2>Our Address</h2>
                 <p>12018 Garner Mill ln, Houston, Texas</p>
                 <p>Email: uyirfoundation@gmail.com</p> <!-- Updated email address -->
-                <p>Phone: +91 98765 43210</p>
+                <p>Phone: +1 706 313 7841</p>
                 <a href="mailto:raveenakumaravel@gmail.com" class="cta-button">Send Us an Email</a> <!-- Button to open email client -->
             </div>
         </div>
