--- a/involved.html
+++ b/involved.html
@@ -27,7 +27,7 @@
 
     <section class="involved">
         <h1>Get Involved</h1>
-        <p>YOUR CONTRIBUTION CAN MAKE A DIFFERENCE. CLICK TO DONATE AND SUPPORT OUR MISSION TO EMPOWER LIVES AND TRANSFORM COMMUNITIES.</p>
+        <p>Your contribution can make a difference. Click to donate and support our mission to empower lives and transform communities.</p>
         <a href="https://www.paypal.me/raveenakumaravel" class="cta-button" target="_blank">
             Donate
         </a>
