--- a/involved.html
+++ b/involved.html
@@ -31,6 +31,29 @@
         <a href="https://www.paypal.me/raveenakumaravel" class="cta-button" target="_blank">
             Donate
         </a>
+        <div class="slideshow-container">
+            <div class="slide fade">
+                <img src="test1.png" alt="Gallery Image 1">
+            </div>
+            <div class="slide fade">
+                <img src="test2.png" alt="Gallery Image 2">
+            </div>
+            <div class="slide fade">
+                <img src="test3.png" alt="Gallery Image 3">
+            </div>
+            <div class="slide fade">
+                <img src="test4.png" alt="Gallery Image 4">
+            </div>
+        </div>
+
+        <br>
+        <!-- Dots for navigation -->
+        <div style="text-align:center">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+        </div>
     </section>
 
     <footer>
