--- a/involved.html
+++ b/involved.html
@@ -60,6 +60,6 @@
         <p>&copy; 2024 Uyir Foundation. All rights reserved.</p>
     </footer>
 
-    <script src="scripts.js"></script>
+    <script src="slider.js"></script>
 </body>
 </html>
