--- a/involved.html
+++ b/involved.html
@@ -24,13 +24,13 @@
             </ul>
         </nav>
     </header>
-
-    <section class="involved">
+<div class="involved">
+    
         <h1>Get Involved</h1>
         <p>Your contribution can make a difference. Click to donate and support our mission to empower lives and transform communities.</p>
         <a href="https://www.paypal.me/raveenakumaravel" class="cta-button" target="_blank">
             Donate
-        </a>
+        </a> </div>
         <div class="slideshow-container">
             <div class="slide fade">
                 <img src="test1.png" alt="Gallery Image 1">
