--- a/events.html
+++ b/events.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
              <div class="logo-centered">
-                <img src="logo.png" alt="Uyir Foundation Logo" />
+                <img src="logo.jpg" alt="Uyir Foundation Logo" />
             </div>
             <h1>Uyir Foundation</h1>
             <ul>
