--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             <div class="contact-info">
                 <h2>Our Address</h2>
                 <p>12018 Garner Mill ln, Houston, Texas</p>
-                <p>Email: uyirfoundation@gmail.com</p> <!-- Updated email address -->
+                <p>Email: venugopal@uyirfoundation.org</p> <!-- Updated email address -->
                 <p>Phone: +1 706 313 7841</p>
                 <a href="mailto:raveenakumaravel@gmail.com" class="cta-button">Send Us an Email</a> <!-- Button to open email client -->
             </div>
