--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,8 @@
                 <p>Houston, Texas</p>
                 <p>Email: venugopal@uyirfoundation.org</p> <!-- Updated email address -->
                 <p>Phone: +1 706 313 7841</p>
-                <a href="mailto:raveenakumaravel@gmail.com" class="cta-button">Send Us an Email</a> <!-- Button to open email client -->
+                <a href="mailto:raveenakumaravel@gmail.com" class="cta-button">Send Us an Email</a> 
+                <img src="img.png" alt="Gallery Image 4"><!-- Button to open email client -->
             </div>
         </div>
     </section>
