--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uyir Foundation - Contact Us</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Additional styles for alignment and Instagram */
+        .contact-info img {
+            display: block;
+            margin: 20px auto;
+            max-width: 100%; /* Ensure responsiveness */
+            height: auto;
+        }
+
+        .social-links {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        .social-links img {
+            width: 30px; /* Adjust the size of the social media icon */
+            height: 30px;
+            margin: 0 10px;
+        }
+
+        .social-links a {
+            display: inline-block;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -29,10 +53,17 @@
             <div class="contact-info">
                 <h2>Our Address</h2>
                 <p>Houston, Texas</p>
-                <p>Email: venugopal@uyirfoundation.org</p> <!-- Updated email address -->
+                <p>Email: venugopal@uyirfoundation.org</p>
                 <p>Phone: +1 706 313 7841</p>
-                <a href="mailto:raveenakumaravel@gmail.com" class="cta-button">Send Us an Email</a> 
-                <img src="img.png" alt="Gallery Image 4"><!-- Button to open email client -->
+                <a href="mailto:raveenakumaravel@gmail.com" class="cta-button">Send Us an Email</a>
+                <img src="img.png" alt="Gallery Image 4">
+                
+                <!-- Add Instagram icon with link -->
+                <div class="social-links">
+                    <a href="https://www.instagram.com/uyirfoundation" target="_blank">
+                        <img src="instagram-icon.png" alt="Instagram">
+                    </a>
+                </div>
             </div>
         </div>
     </section>
