--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                 <p>Email: venugopal@uyirfoundation.org</p>
                 <p>Phone: +1 706 313 7841</p>
                 <a href="mailto:raveenakumaravel@gmail.com" class="cta-button">Send Us an Email</a>
-                <img src="img.png" alt="Gallery Image 4">
+                <img src="image.png" alt="Gallery Image 4">
                 
                 <!-- Add Instagram icon with link -->
                 <div class="social-links">
