--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
                 
                 <!-- Add Instagram icon with link -->
                 <div class="social-links">
-                    <a href="https://www.instagram.com/uyirfoundation" target="_blank">
+                    <a href="https://www.instagram.com/uyirfoundation1" target="_blank">
                         <img src="instagram-icon.png" alt="Instagram">
                     </a>
                 </div>
