--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                 <p>Houston, Texas</p>
                 <p>Email: venugopal@uyirfoundation.org</p>
                 <p>Phone: +1 706 313 7841</p>
-                <a href="mailto:raveenakumaravel@gmail.com" class="cta-button">Send Us an Email</a>
+                <a href="mailto:venugopal@uyirfoundation.org" class="cta-button">Send Us an Email</a>
                 <img src="image.png" alt="Gallery Image 4">
                 
                 <!-- Add Instagram icon with link -->
