--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
                 <!-- Add Instagram icon with link -->
                 <div class="social-links">
                     <a href="https://www.instagram.com/uyirfoundation1" target="_blank">
-                        <img src="instagram_icon.png" alt="Instagram">
+                        <img src="insta.webp" alt="Instagram">
                     </a>
                 </div>
             </div>
